--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,23 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+        
+        <dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.42</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>com.zaxxer</groupId>
+		    <artifactId>HikariCP</artifactId>
+		    <version>3.2.0</version>
+		</dependency>
+		<dependency>
+		  <groupId>org.opensymphony.quartz</groupId>
+		  <artifactId>quartz-all</artifactId>
+		  <version>1.6.1</version>
+		</dependency>
     </dependencies>
 
     <build>
