client test demo

--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,12 @@
 		  <version>${vertx.version}</version>
 		</dependency>
 		
+		<dependency>
+		  <groupId>io.vertx</groupId>
+		  <artifactId>vertx-sql-common</artifactId>
+		  <version>${vertx.version}</version>
+		</dependency>
+		
         <dependency>
             <groupId>io.vertx</groupId>
             <artifactId>vertx-unit</artifactId>
