--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,12 @@
         </dependency>
         
         <dependency>
+		  <groupId>io.vertx</groupId>
+		  <artifactId>vertx-auth-oauth2</artifactId>
+		  <version>${vertx.version}</version>
+		</dependency>
+        
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
